--- a/movie-scrub/styles/main.css
+++ b/movie-scrub/styles/main.css
@@ -6,11 +6,11 @@
 
 /*******************      Main Elements Styling      ******************/
 
-header {height: 70px;font-family: 'Oswald', sans-serif;font-size: 18px;background-color: #ff8000 ;color: white;padding:  11px 0 0 0 !important;margin: 0 0 0 0;}
+header {;font-family: 'Oswald', sans-serif;font-size: 18px;background-color: #ff8000 ;color: white;padding:0 !important;margin: 0 0 0 0;}
 
 .subheading { font-size: 28px}
 
-body header {padding: 0 13px;}
+body header {padding: 0;}
 
 body main h1    {margin-bottom: 0;}
 
@@ -26,31 +26,16 @@ body {font-family: 'Roboto', sans-serif; font-size: 16px;min-width:250px;}
 
 #overviewVid {text-decoration: none;color: #FFFFFF;}
 
-#overviewVid:hover {background-color: #794A18;}
-
 #salesLink {text-decoration: none;color: #000000;}
 
-#salesLink:hover {color: #00cc00;}
 
 #serviceLink {text-decoration: none;color: #000000;}
-
-#serviceLink:hover {color: #00cc00;}
-
-#adventureLink {text-decoration: none;color: #000000;}
-
-#adventureLink:hover {color: #00cc00;}
 
 footer { background-color: #ff8000; color: white;padding: .5rem .5rem;width: 100%; position: absolute;}
 
 .footer-bar { text-align: center;}
 
 .contact-info { text-align: center;}
-
-article { margin: 2em 1em; font-family: 'PT Serif', serif;}
-
-aside {margin: 2em 1em;}
-
-iframe {margin: 3em 1.5em;}
 
 /*******************      Nav Styling     ******************/
 
@@ -60,7 +45,11 @@ iframe {margin: 3em 1.5em;}
 
 nav button {outline: none; margin: .2rem 2%;background-color: transparent; border: none;font-size: 2rem;color: white;}
 
-nav {background-color: #ff8000 !important; font-family: Verdana, sans-serif;margin: 0;padding: 3em 1em 1em 1em;}
+nav {background-color: #ff8000 !important; font-family: Verdana, sans-serif;margin: 0;}
+
+nav ul li a:hover {background-color: #ff9933;}
+
+nav ul li#active a {background-color: #FFF; color: #ff8000;}
 
 nav ul {font-weight: bold;list-style-type: none;padding: 0;margin: 0;}
 
@@ -68,9 +57,7 @@ nav ul li {list-style-type: none;min-height:40px;position: relative;border:0px s
 
 nav ul li a {color: white; display: flex;padding: .8rem 2%;background-color: #ff8000 ;text-decoration: none;}
 
-nav ul li a:hover {background-color: #ff9933;}
 
-nav ul li#active a {background-color: rgba(0,0,0,.4); color: #fff;}
 
 nav ul.hide {display: none;}
 
