--- a/movie-scrub/styles/medium.css
+++ b/movie-scrub/styles/medium.css
@@ -21,14 +21,14 @@
     }
     
     nav ul li a {
-        padding: .9rem 1rem;
+        padding: .8rem .7rem;
 
     }
 
-    nav ul li#active a {background-color: rgba(0,0,0,.4);color: #fff;}
+    nav ul li#active a {background-color: #fff;color: #ff8000;}
 
     nav ul li a:hover {
-        color: white; background-color: #794A18;}
+        color: white; background-color: #ff9933;}
 
     article picture {float:right; }  /* responsive images */
 
