--- a/movie-scrub/styles/main.css
+++ b/movie-scrub/styles/main.css
@@ -16,7 +16,7 @@ body main h1 {margin-bottom: 0;}
 
 body main { margin-left: 2em; }
 
-body {font-family: 'Roboto', sans-serif; font-size: 16px;min-width:250px;}
+body {font-family: 'Roboto', sans-serif; font-size: 16px;min-width:250px; color: black;}
 
 footer { background-color: #ff8000; color: white; padding: 5px; width: 100%; position: absolute;}
 
